Minimal jdk 9 support